feat: interests and photo

--- a/index.html
+++ b/index.html
@@ -71,10 +71,36 @@
       École Polytechnique
     </p>
     <p>
-      <a href="https://blog.plummmm.com/">Blog</a>
-      <a href="https://about.plummmm.com/">Old</a>
+      <a href="https://blog.plummmm.com/">Blog</a> |
+      <a href="https://about.plummmm.com/">Old "About me"</a> |
+      <a href="photo.jpg">Photo</a>
     </p>
     <hr />
-    <p>WIP</p>
+    <h2>About</h2>
+    <p>
+      I'm currently a student in mathematics and computer science. I'm also a
+      part-time assistant coach and problemsetter for the
+      <a href="https://thailandoi-org.vercel.app">
+        Thailand team to compete in the International Olympiad in Informatics</a
+      >.
+    </p>
+    <h2>Academic Interests</h2>
+    Since I'm in the Bachelor level, my academic interests will be quite wide
+    but not really deep. I'm interested in (last updated Sep 11, 2023):
+    <ul>
+      <li>Group theory</li>
+      <li>Galois theory</li>
+      <li>Algebraic topology</li>
+      <li>Algebraic geometry</li>
+      <li>Arithmetic geometry</li>
+      <li>Number theory</li>
+      <li>Complexity theory</li>
+      <li>Graph algorithms</li>
+      <li>Computer architecture</li>
+      <li>Cryptography</li>
+      <li>Combinatorics</li>
+      <li>Philosophy of science, mathematics, politics and moral</li>
+    </ul>
+    WIP
   </body>
 </html>
