--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Sarabun&display=swap"
       rel="stylesheet"
     />
     <style type="text/css">
       body {
-        font-family: "Fira Sans", sans-serif;
+        font-family: "Fira Sans", "Sarabun", sans-serif;
       }
       @media (max-width: 400px) {
         body {
@@ -65,7 +65,8 @@
     </style>
   </head>
   <body>
-    <h1>Sirawit Pongnakintr</h1>
+    <h1 style="margin-bottom: 0px">Sirawit Pongnakintr</h1>
+    <h4 style="margin-top: 0px">สิรวิชญ์ พงศ์นคินทร์</h4>
     <p>
       Bachelor Student (Double Major in Mathematics and Computer Science) at
       École Polytechnique
@@ -73,13 +74,16 @@
     <p>
       <a href="https://blog.plummmm.com/">Blog</a> |
       <a href="https://about.plummmm.com/">Old "About me"</a> |
-      <a href="photo.jpg">Photo</a>
+      <a href="photo.jpg">Photo</a> |
+      <a href="https://github.com/plumsirawit">GitHub</a>
     </p>
     <hr />
-    <h2>About</h2>
+    <h2>Short Info</h2>
     <p>
-      I'm currently a student in mathematics and computer science. I'm also a
-      part-time assistant coach and problemsetter for the
+      I'm currently a third year bachelor student in mathematics and computer
+      science at
+      <a href="https://www.polytechnique.edu/">École Polytechnique</a>. I'm also
+      a part-time assistant coach and problemsetter for the
       <a href="https://thailandoi-org.vercel.app">
         Thailand team to compete in the International Olympiad in Informatics</a
       >.
@@ -101,6 +105,104 @@
       <li>Combinatorics</li>
       <li>Philosophy of science, mathematics, politics and moral</li>
     </ul>
-    WIP
+    <h2>Competitive Programming</h2>
+    <p>
+      I started doing competitive programming back in 2015, where I learned the
+      basics of C/C++. With a moderate amount of practice, I was able to join
+      the regional training camp at Silpakorn University in 2016 and then I
+      participated the Thailand Olympiad in Informatics (TOI) in 2017, receiving
+      a gold medal. After that, I tried, failed, and tried again, in the
+      national level, until I was selected as the top four of Thailand. I then
+      competed in IOI2019 and IOI2020, receiving two bronze medals.
+    </p>
+    <p>
+      One important thing that I want to declare is that: all these practice
+      sessions, all these trainings, all these pains and joys, they're not
+      meaningless! Even at this point where I'm too old to do IOI, I still
+      embrace those moments as an important part of my life! This is why I'm
+      still a competitive programmer and I'm very proud of that.
+    </p>
+    <p>
+      Currently, I'm still an active competitive programmer, training to compete
+      in SWERC/ICPC as a part of the École Polytechnique team. Apart from that,
+      I'm also an assistant coach and problemsetter for the Thailand team
+      selection to compete in the IOI.
+    </p>
+    <p>
+      Mini book that I wrote (in Thai):
+      <a
+        href="https://github.com/plumsirawit/101-for-ioi/releases/tag/v0.1.1-alpha"
+        >101 for IOI</a
+      >
+    </p>
+    <h2>Why do I choose to study Math/CS?</h2>
+    <p>
+      Before answering that question, let me declare that my view towards
+      mathematics is aligned to
+      <a href="https://plato.stanford.edu/entries/platonism-mathematics/"
+        >mathematical platonism</a
+      >
+      (referenced from the Stanford Encyclopedia of Philosophy on Sep 11, 2023).
+      This is in contrast to some of my friends' views that mathematics is
+      constructed by humans, or that mathematics is just a convenient tool to
+      solve problems. For me, it is more that just a construction or a tool.
+      Mathematics is a realm of unknowns and their connections. The study of
+      mathematics deserves its own purpose, independent of technological
+      advances and independent of applications. However, this doesn't restrict
+      my goals to studying only the <b>pure</b> mathematics. Sometimes I also
+      study mathematics for its applications.
+    </p>
+    <p>
+      One can characterize my "reason to study" as a combination of simply two
+      things:
+    </p>
+    <ul>
+      <li>
+        I solve problems because they are fun to think about. It's like a puzzle
+        game where I can spend time thinking on solutions to the puzzle. This is
+        the same reason as why I like to play puzzle games, and this is more
+        CS-oriented.
+      </li>
+      <li>
+        I study deeper mathematics because I want to uncover the underlying
+        truth. I want to know more about something that I don't know. It's fun
+        when I learn something I don't understand before. This is the reason why
+        I study topics in pure math.
+      </li>
+    </ul>
+    <p>
+      Seeing open problems and conjectures, these two motivations push me
+      forward to think about things and to go try solving them for fun (even if
+      I almost always failed).
+    </p>
+    <p>
+      Another personal aspect is that even though I can just work as a software
+      engineer for the rest of my life, I want something more. I want to enjoy
+      my life in other aspects. To push the limits and try my best once again at
+      something. To laugh and cry once more. This is why I hope to do multiple
+      things, both the difficult ones and the easy ones. Continuing to study was
+      an experience that gave me back my student life and I enjoyed it very
+      much!
+    </p>
+    <h2>Software Engineering</h2>
+    <p>
+      Before coming to study in France, right after finishing high school at
+      <a href="https://www.mwit.ac.th/html/">Mahidol Wittayanusorn School</a>, I
+      was a software engineering intern, and then a full-time software engineer
+      at <a href="https://www.brikl.com/">Brikl</a> for a few months. I mostly
+      developed websites using React and handle 3D interactions using ThreeJS
+      and Fabric.js. I did a little bit on SVG and file processing. Before that,
+      I started my hobby from developing multiple programming judges/graders
+      such as Fossil Grader and Cafe Grader.
+    </p>
+    <h2>Hobbies</h2>
+    <p>
+      I play computer games. Mostly puzzle, rhythm, and indie games. Sometimes I
+      play FPS, MOBA or MMORPG also. I play the piano (basic) and the guitar
+      (also basic). I play badminton and table tennis (and do a little bit of
+      running, sometimes). I also watch volleyball sometimes.
+    </p>
+    <hr />
+    <p>Last Updated: Sep 11, 2023</p>
   </body>
 </html>
