--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       @media (max-width: 400px) {
         body {
           font-size: 12px;
+          margin-left: 10px;
+          margin-right: 10px;
           margin-top: 10px;
           margin-bottom: 15px;
         }
@@ -22,6 +24,8 @@
       @media (min-width: 401px) and (max-width: 600px) {
         body {
           font-size: 14px;
+          margin-left: 10px;
+          margin-right: 10px;
           margin-top: 10px;
           margin-bottom: 15px;
         }
@@ -30,6 +34,8 @@
       @media (min-width: 601px) and (max-width: 900px) {
         body {
           font-size: 15px;
+          margin-left: 100px;
+          margin-right: 100px;
           margin-top: 20px;
           margin-bottom: 25px;
         }
@@ -38,6 +44,8 @@
       @media (min-width: 901px) and (max-width: 1800px) {
         body {
           font-size: 17px;
+          margin-left: auto;
+          margin-right: auto;
           margin-top: 30px;
           margin-bottom: 25px;
           max-width: 800px;
@@ -47,15 +55,12 @@
       @media (min-width: 1801px) {
         body {
           font-size: 18px;
+          margin-left: auto;
+          margin-right: auto;
           margin-top: 30px;
           margin-bottom: 25px;
           max-width: 1000px;
         }
-      }
-
-      body {
-        margin-left: auto;
-        margin-right: auto;
       }
     </style>
   </head>
