--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </p>
     <p>
       <a href="https://blog.plummmm.com/">Blog</a> |
-      <a href="https://about.plummmm.com/">Old "About me"</a> |
+      <a href="https://2021.about.plummmm.com/">Old "About me"</a> |
       <a href="photo.jpg">Photo</a> |
       <a href="https://github.com/plumsirawit">GitHub</a>
     </p>
