fix: develop details

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -75,7 +76,8 @@
       <a href="https://blog.plummmm.com/">Blog</a> |
       <a href="https://2021.about.plummmm.com/">Old "About me"</a> |
       <a href="photo.jpg">Photo</a> |
-      <a href="https://github.com/plumsirawit">GitHub</a>
+      <a href="https://github.com/plumsirawit">GitHub</a> |
+      <a href="https://codeforces.com/profile/Plurm">Codeforces</a>
     </p>
     <hr />
     <h2>Short Info</h2>
@@ -86,7 +88,7 @@
       a part-time assistant coach and problemsetter for the
       <a href="https://thailandoi-org.vercel.app">
         Thailand team to compete in the International Olympiad in Informatics</a
-      >.
+      >. I enjoy studying mathematics and solving algorithmic problems.
     </p>
     <h2>Academic Interests</h2>
     Since I'm in the Bachelor level, my academic interests will be quite wide
@@ -141,9 +143,7 @@
       mathematics is aligned to
       <a href="https://plato.stanford.edu/entries/platonism-mathematics/"
         >mathematical platonism</a
-      >
-      (referenced from the Stanford Encyclopedia of Philosophy on Sep 11, 2023).
-      This is in contrast to some of my friends' views that mathematics is
+      >. This is in contrast to some of my friends' views that mathematics is
       constructed by humans, or that mathematics is just a convenient tool to
       solve problems. For me, it is more that just a construction or a tool.
       Mathematics is a realm of unknowns and their connections. The study of
@@ -175,25 +175,22 @@
       forward to think about things and to go try solving them for fun (even if
       I almost always failed).
     </p>
-    <p>
-      Another personal aspect is that even though I can just work as a software
-      engineer for the rest of my life, I want something more. I want to enjoy
-      my life in other aspects. To push the limits and try my best once again at
-      something. To laugh and cry once more. This is why I hope to do multiple
-      things, both the difficult ones and the easy ones. Continuing to study was
-      an experience that gave me back my student life and I enjoyed it very
-      much!
-    </p>
     <h2>Software Engineering</h2>
     <p>
       Before coming to study in France, right after finishing high school at
       <a href="https://www.mwit.ac.th/html/">Mahidol Wittayanusorn School</a>, I
       was a software engineering intern, and then a full-time software engineer
       at <a href="https://www.brikl.com/">Brikl</a> for a few months. I mostly
-      developed websites using React and handle 3D interactions using ThreeJS
+      developed websites using React and handled 3D interactions using ThreeJS
       and Fabric.js. I did a little bit on SVG and file processing. Before that,
       I started my hobby from developing multiple programming judges/graders
       such as Fossil Grader and Cafe Grader.
+    </p>
+    <p>
+      Sample projects: <a href="https://pdf.graders.me/">task-pdf-writer</a> and
+      <a href="https://github.com/plumsirawit/cafe-grader-docker/"
+        >Dockerized Cafe Grader</a
+      >.
     </p>
     <h2>Hobbies</h2>
     <p>
@@ -202,7 +199,10 @@
       (also basic). I play badminton and table tennis (and do a little bit of
       running, sometimes). I also watch volleyball sometimes.
     </p>
+    <h2></h2>
     <hr />
-    <p>Last Updated: Sep 11, 2023</p>
+    <p>
+      Last Updated: Sep 12, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+    </p>
   </body>
 </html>
