--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>Sirawit Pongnakintr</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Sirawit Pongnakintr's personal website, describing basic information."
+    />
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Sarabun&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <style type="text/css">
@@ -67,7 +77,7 @@
   </head>
   <body>
     <h1 style="margin-bottom: 0px">Sirawit Pongnakintr</h1>
-    <h4 style="margin-top: 0px">สิรวิชญ์ พงศ์นคินทร์</h4>
+    <h4 style="margin-top: 0px" lang="th">สิรวิชญ์ พงศ์นคินทร์</h4>
     <p>
       Bachelor Student (Double Major in Mathematics and Computer Science) at
       École Polytechnique
@@ -202,7 +212,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Sep 12, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Sep 19, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
