--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
     </p>
     <h2>Academic Interests</h2>
     Since I'm in the Bachelor level, my academic interests will be quite wide
-    but not really deep. I'm interested in (last updated Sep 11, 2023):
+    but not really deep. I'm interested in (last updated Oct 24, 2023):
     <ul>
-      <li>Group theory</li>
-      <li>Galois theory</li>
       <li>Algebraic topology</li>
       <li>Algebraic geometry</li>
       <li>Arithmetic geometry</li>
@@ -113,8 +111,7 @@
       <li>Complexity theory</li>
       <li>Graph algorithms</li>
       <li>Computer architecture</li>
-      <li>Cryptography</li>
-      <li>Combinatorics</li>
+      <li>History of mathematics</li>
       <li>Philosophy of science, mathematics, politics and moral</li>
     </ul>
     <h2>Competitive Programming</h2>
@@ -146,6 +143,21 @@
         href="https://github.com/plumsirawit/101-for-ioi/releases/tag/v0.1.1-alpha"
         >101 for IOI</a
       >
+    </p>
+    <h2>Competitive Mathematics</h2>
+    <p>
+      Apart from competitive programming, competitive math is also another activity
+      that fulfilled my childhood memories. Before entering higher studies, I
+      competed in the Genius IPST program (Grade 3 and 6) and I want to say that
+      it is **one among the important factors that brought me to where I am today**.
+      During middle school, I attended the mathematics olympiad regional POSN camp
+      (Camp 1-2, Silpakorn University, 2015-2016).
+    </p>
+    <p>
+      After high school, competitive math, for me, is one of my hobbies. Especially
+      since September 2023, I started to feel it again. Those moments,
+      the enjoyment and excitement. Currently I practice competitive math just
+      for fun. (And for the hope that it might improve my skills on research math)
     </p>
     <h2>Why do I choose to study Math/CS?</h2>
     <p>
@@ -185,6 +197,23 @@
       forward to think about things and to go try solving them for fun (even if
       I almost always failed).
     </p>
+    <h2>Research</h2>
+    <p>
+      I'm just a beginner in research, and currently it's still my exploration
+      phase. I attended the Summer Research Program at ITCSC, CUHK in the summer
+      of 2023, and I thank Prof. Siu On Chan for supervising me on topics about
+      promise constraint satisfaction problems, in complexity theory.
+    </p>
+    <p>
+      Currently, I'm doing a lab research project (PRL) on "Elliptic Curves and
+      Cryptography", and I thank Prof. Diego Izquierdo for supervising me. I'm
+      still a beginner in algebraic geometry but I'm learning.
+    </p>
+    <p>
+      I also would like to thank Prof. Jittat Fakcharoenphol for introducing me
+      to theoretical computer science and research (in general). Without him,
+      I would have not known even about the starting point of research.
+    </p>
     <h2>Software Engineering</h2>
     <p>
       Before coming to study in France, right after finishing high school at
@@ -212,7 +241,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Sep 19, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Oct 24, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
