--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       Apart from competitive programming, competitive math is also another activity
       that fulfilled my childhood memories. Before entering higher studies, I
       competed in the Genius IPST program (Grade 3 and 6) and I want to say that
-      it is **one among the important factors that brought me to where I am today**.
+      it is <b>one among the important factors that brought me to where I am today</b>.
       During middle school, I attended the mathematics olympiad regional POSN camp
       (Camp 1-2, Silpakorn University, 2015-2016).
     </p>
