feat: prl report and slides

--- a/index.html
+++ b/index.html
@@ -146,18 +146,20 @@
     </p>
     <h2>Competitive Mathematics</h2>
     <p>
-      Apart from competitive programming, competitive math is also another activity
-      that fulfilled my childhood memories. Before entering higher studies, I
-      competed in the Genius IPST program (Grade 3 and 6) and I want to say that
-      it is <b>one among the important factors that brought me to where I am today</b>.
-      During middle school, I attended the mathematics olympiad regional POSN camp
-      (Camp 1-2, Silpakorn University, 2015-2016).
+      Apart from competitive programming, competitive math is also another
+      activity that fulfilled my childhood memories. Before entering higher
+      studies, I competed in the Genius IPST program (Grade 3 and 6) and I want
+      to say that it is
+      <b>one among the important factors that brought me to where I am today</b
+      >. During middle school, I attended the mathematics olympiad regional POSN
+      camp (Camp 1-2, Silpakorn University, 2015-2016).
     </p>
     <p>
-      After high school, competitive math, for me, is one of my hobbies. Especially
-      since September 2023, I started to feel it again. Those moments,
-      the enjoyment and excitement. Currently I practice competitive math just
-      for fun. (And for the hope that it might improve my skills on research math)
+      After high school, competitive math, for me, is one of my hobbies.
+      Especially since September 2023, I started to feel it again. Those
+      moments, the enjoyment and excitement. Currently I practice competitive
+      math just for fun. (And for the hope that it might improve my skills on
+      research math)
     </p>
     <h2>Why do I choose to study Math/CS?</h2>
     <p>
@@ -205,14 +207,22 @@
       promise constraint satisfaction problems, in complexity theory.
     </p>
     <p>
-      Currently, I'm doing a lab research project (PRL) on "Elliptic Curves and
-      Cryptography", and I thank Prof. Diego Izquierdo for supervising me. I'm
-      still a beginner in algebraic geometry but I'm learning.
+      During September 2023 - December 2023, I did a lab research project (PRL)
+      on "Introduction to Elliptic Curves", and I thank Prof. Diego Izquierdo
+      for supervising me. I'm still a beginner in algebraic geometry but I'm
+      learning. Here are the
+      <a href="/elliptic_curves_report_rev2.pdf">report</a> and the
+      <a href="/prl_slides_final.pdf">slides</a>.
+    </p>
+    <p>
+      I'm continuing my bachelor thesis on elliptic curves, specifically, its
+      applications to cryptography, and elliptic curves over number fields. This
+      thesis will also be supervised by Prof. Diego Izquierdo.
     </p>
     <p>
       I also would like to thank Prof. Jittat Fakcharoenphol for introducing me
-      to theoretical computer science and research (in general). Without him,
-      I would have not known even about the starting point of research.
+      to theoretical computer science and research (in general). Without him, I
+      would have not known even about the starting point of research.
     </p>
     <h2>Software Engineering</h2>
     <p>
@@ -241,7 +251,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Oct 24, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Dec 14, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
