--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       <a href="https://2021.about.plummmm.com/">Old "About me"</a> |
       <a href="photo.jpg">Photo</a> |
       <a href="https://github.com/plumsirawit">GitHub</a> |
-      <a href="https://codeforces.com/profile/Plurm">Codeforces</a>
+      <a href="https://codeforces.com/profile/Plurm">Codeforces</a> |
+      <a href="cv_dec2023_public.pdf">CV</a>
     </p>
     <hr />
     <h2>Short Info</h2>
@@ -251,7 +252,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Dec 14, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Dec 16, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
