feat: plus ultra!

--- a/index.html
+++ b/index.html
@@ -76,8 +76,21 @@
     </style>
   </head>
   <body>
-    <h1 style="margin-bottom: 0px">Sirawit Pongnakintr</h1>
-    <h4 style="margin-top: 0px" lang="th">สิรวิชญ์ พงศ์นคินทร์</h4>
+    <div style="display: flex; justify-content: space-between">
+      <div style="margin-top: 0.67em; margin-bottom: 0.67em">
+        <h1 style="margin: 0px">Sirawit Pongnakintr</h1>
+        <h4 style="margin: 0px" lang="th">สิรวิชญ์ พงศ์นคินทร์</h4>
+      </div>
+      <div
+        style="
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+        "
+      >
+        <img style="width: 5em" src="/plusultra.svg" />
+      </div>
+    </div>
     <p>
       Bachelor Student (Double Major in Mathematics and Computer Science) at
       École Polytechnique
@@ -103,15 +116,12 @@
     </p>
     <h2>Academic Interests</h2>
     Since I'm in the Bachelor level, my academic interests will be quite wide
-    but not really deep. I'm interested in (last updated Oct 24, 2023):
+    but not really deep. I'm interested in (last updated Jan 22, 2024):
     <ul>
-      <li>Algebraic topology</li>
       <li>Algebraic geometry</li>
-      <li>Arithmetic geometry</li>
       <li>Number theory</li>
       <li>Complexity theory</li>
       <li>Graph algorithms</li>
-      <li>Computer architecture</li>
       <li>History of mathematics</li>
       <li>Philosophy of science, mathematics, politics and moral</li>
     </ul>
@@ -252,7 +262,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Dec 16, 2023<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Jan 22, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
