feat: cv update

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a href="photo.jpg">Photo</a> |
       <a href="https://github.com/plumsirawit">GitHub</a> |
       <a href="https://codeforces.com/profile/Plurm">Codeforces</a> |
-      <a href="cv_dec2023_public.pdf">CV</a>
+      <a href="cv_jan2024_public.pdf">CV (29 Jan 2024)</a>
     </p>
     <hr />
     <h2>Short Info</h2>
@@ -262,7 +262,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Jan 22, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Jan 29, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
