fix: update edgy statements

--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@
       <li>History of mathematics</li>
       <li>Philosophy of science, mathematics, politics and moral</li>
     </ul>
-    <h2>Competitive Programming</h2>
+    <h2>Competitive Programming and Mathematics</h2>
+    <p>
+      Unfortunately, due to having to balance my time, I'm now pretty inactive
+      in competitive programming and mathematics. However, I'm still an
+      assistant coach and problemsetter for the Thailand team to compete in the
+      IOI. I also practice competitive mathematics in my free time.
+    </p>
+    <p>
+      Mini book that I wrote (in Thai):
+      <a
+        href="https://github.com/plumsirawit/101-for-ioi/releases/tag/v0.1.1-alpha"
+        >101 for IOI</a
+      >
+    </p>
+    <!-- <h2>Competitive Programming</h2>
     <p>
       I started doing competitive programming back in 2015, where I learned the
       basics of C/C++. With a moderate amount of practice, I was able to join
@@ -143,17 +157,12 @@
       still a competitive programmer and I'm very proud of that.
     </p>
     <p>
-      Currently, I'm still an active competitive programmer, training to compete
-      in SWERC/ICPC as a part of the École Polytechnique team. Apart from that,
-      I'm also an assistant coach and problemsetter for the Thailand team
-      selection to compete in the IOI.
-    </p>
-    <p>
-      Mini book that I wrote (in Thai):
-      <a
-        href="https://github.com/plumsirawit/101-for-ioi/releases/tag/v0.1.1-alpha"
-        >101 for IOI</a
-      >
+      Currently, I'm not really active in competitive programming anymore due to
+      having to manage my time with mathematics. However, I still feel grateful
+      that I had a chance to compete. Recently, I, along with my team, won
+      silver medal at the SWERC competition, representing École Polytechnique.
+      Apart from that, I'm also an assistant coach and problemsetter for the
+      Thailand team selection to compete in the IOI.
     </p>
     <h2>Competitive Mathematics</h2>
     <p>
@@ -171,7 +180,7 @@
       moments, the enjoyment and excitement. Currently I practice competitive
       math just for fun. (And for the hope that it might improve my skills on
       research math)
-    </p>
+    </p> -->
     <h2>Why do I choose to study Math/CS?</h2>
     <p>
       Before answering that question, let me declare that my view towards
@@ -210,6 +219,13 @@
       forward to think about things and to go try solving them for fun (even if
       I almost always failed).
     </p>
+    <p>
+      Update (a strong statement from me): Stupidity doesn't stop me from doing
+      math. I may try and I may fail. And at least I'm proud to fail rather than
+      not even give it a try. I dare to dream. To be a great mathematician who
+      stands alongside the frontiers of humanity. And even if I fail, I'd rather
+      die trying hard.
+    </p>
     <h2>Research</h2>
     <p>
       I'm just a beginner in research, and currently it's still my exploration
@@ -228,7 +244,9 @@
     <p>
       I'm continuing my bachelor thesis on elliptic curves, specifically, its
       applications to cryptography, and elliptic curves over number fields. This
-      thesis will also be supervised by Prof. Diego Izquierdo.
+      thesis will also be supervised by Prof. Diego Izquierdo. I'm also planning
+      to continue my studies in fundamental mathematics (probably in arithmetic
+      geometry).
     </p>
     <p>
       I also would like to thank Prof. Jittat Fakcharoenphol for introducing me
@@ -252,17 +270,17 @@
         >Dockerized Cafe Grader</a
       >.
     </p>
-    <h2>Hobbies</h2>
+    <!-- <h2>Hobbies</h2>
     <p>
       I play computer games. Mostly puzzle, rhythm, and indie games. Sometimes I
       play FPS, MOBA or MMORPG also. I play the piano (basic) and the guitar
       (also basic). I play badminton and table tennis (and do a little bit of
       running, sometimes). I also watch volleyball sometimes.
-    </p>
+    </p> -->
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Jan 29, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Mar 1, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
