chore: update bachelor thesis

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <a href="photo.jpg">Photo</a> |
       <a href="https://github.com/plumsirawit">GitHub</a> |
       <a href="https://codeforces.com/profile/Plurm">Codeforces</a> |
-      <a href="cv_jan2024_public.pdf">CV (29 Jan 2024)</a>
+      <a href="cv_apr2024_public.pdf">CV (12 Apr 2024)</a>
     </p>
     <hr />
     <h2>Short Info</h2>
@@ -242,11 +242,13 @@
       <a href="/prl_slides_final.pdf">slides</a>.
     </p>
     <p>
-      I'm continuing my bachelor thesis on elliptic curves, specifically, its
-      applications to cryptography, and elliptic curves over number fields. This
-      thesis will also be supervised by Prof. Diego Izquierdo. I'm also planning
-      to continue my studies in fundamental mathematics (probably in arithmetic
-      geometry).
+      During January 2024 - March 2024, I did my bachelor thesis on elliptic
+      curves, specifically, its applications to cryptography, and Mordell--Weil
+      theorem for elliptic curves over rational numbers. This is also supervised
+      by Prof. Diego Izquierdo. I'm also planning to continue my studies in
+      fundamental mathematics (probably in arithmetic geometry). Here are the
+      <a href="/thesis_final.pdf">report</a> and the
+      <a href="/bt_slides.pdf">slides</a>.
     </p>
     <p>
       I also would like to thank Prof. Jittat Fakcharoenphol for introducing me
@@ -280,7 +282,7 @@
     <h2></h2>
     <hr />
     <p>
-      Last Updated: Mar 1, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
+      Last Updated: Apr 12, 2024<br />Contact: &lt;myfirstname&gt;@pongnakin.com
     </p>
   </body>
 </html>
